# shittim-chest

./: .dockerignore  .env.example  .gitignore  .importlinter  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE-SCOPE.md  README.md  SECURITY.md  cdk.json  container-policy.json  notification-smoke-test.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/: dependabot.yml  pull_request_template.md  tool-versions.json
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  dependency-graph.yml  discord-repository-events.yml  discord-security-digest.yml  discord-workflow-run.yml  tool-versions.yml
docs/: 00_シッテムの箱_ドキュメント索引.md  01_要求仕様書・基本設計書.md  02_議論事項・意思決定記録.md  10_アプリケーション・Python詳細設計.md  11_Discord詳細設計.md  12_OpenAI・プロンプト詳細設計.md  13_DynamoDB・データ整合性詳細設計.md  14_AWS・CDK詳細設計.md  15_GitHub・CI-CD詳細設計.md  16_セキュリティ・プライバシー詳細設計.md  17_運用保守・監視・障害対応設計.md  18_試験・品質保証設計.md  19_実装計画・トレーサビリティ.md  20_実装・試験・検証記録.md  21_GitHub・Discord通知運用設計.md  LICENSE.md  README.md
infra/: check-audit.mjs  npm-audit-exceptions.json
infra/lib/: runtime-stack.ts  stateful-stack.ts
infra/test/: runtime-stack.test.ts  stateful-stack.test.ts
security/: container-risk-acceptance.json  container-risk-acceptance.schema.json
src/shittim_chest/: __init__.py  __main__.py  bootstrap.py
src/shittim_chest/adapters/: __init__.py
tests/contract/: __init__.py
tests/fixtures/: container_process.py  escalation_eval_v1.json  runtime_process.py
tests/integration/: __init__.py
tests/unit/: test_bootstrap.py
tools/: __init__.py  check_container_policy.py  check_container_risk_acceptance.py  check_docs.py  check_image_sbom.py  check_notification_workflows.py  check_public_surface.py  check_sbom.py  check_secret_scanners.py  check_tool_versions.py  evaluate_escalation.py  report_grype.py  review_escalation.py  run_container_gate.py  run_dynamodb_local.py  score_escalation.py  sync_docs.py
tools/github_discord_notifications/: __init__.py  __main__.py  cli.py  formatting.py  github_api.py  models.py  repository_events.py  security_digest.py  webhook.py  workflow_run.py
(+89 files in other folders)
