[project]
name = "shittim-chest"
version = "0.1.0"
description = "Discord multi-agent debate bot"
readme = "README.md"
requires-python = ">=3.14,<3.15"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "boto3>=1.43.51,<2",
    "discord.py>=2.7.1,<3",
    "httpx>=0.28.1,<0.29",
    "openai>=2.46.0,<3",
    "pydantic>=2.13.4,<3",
]

[project.urls]
Homepage = "https://github.com/pitekusu/shittim-chest"
Documentation = "https://github.com/pitekusu/shittim-chest/tree/main/docs"
Issues = "https://github.com/pitekusu/shittim-chest/issues"
Repository = "https://github.com/pitekusu/shittim-chest"

[dependency-groups]
dev = [
    "boto3-stubs[dynamodb]>=1.43.50,<2",
    "cyclonedx-python-lib[json-validation]>=11.11.0,<12",
    "hypothesis>=6.157.0,<7",
    "import-linter>=2.13,<3",
    "pip-audit>=2.10.1,<3",
    "pytest>=9.1.1,<10",
    "pytest-asyncio>=1.4.0,<2",
    "pytest-cov>=7.1.0,<8",
    "ruff>=0.15.22,<0.16",
    "ty>=0.0.61,<0.1",
]

[build-system]
requires = ["uv_build>=0.11.29,<0.12"]
build-backend = "uv_build"

[tool.uv]
required-version = ">=0.11.8,<0.12"

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC", "RUF", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.ty.src]
include = ["src", "tests", "tools"]

[tool.ty.rules]
missing-type-argument = "error"
possibly-unresolved-reference = "warn"

[tool.pytest]
minversion = "9.1"
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "--strict-config",
    "--strict-markers",
    "--import-mode=importlib",
    "--cov=shittim_chest.domain",
    "--cov=shittim_chest.application",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=90",
]
asyncio_mode = "strict"
xfail_strict = true
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["shittim_chest.domain", "shittim_chest.application"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true
